# kbgen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.bundle.yml  docker-compose.yml  pyproject.toml  start.sh
docker/: glpi.docker-compose.yml  postgres-init.sql  postgres.docker-compose.yml
docker/glpi-preconfigured/: Dockerfile  entrypoint.sh
scripts/: run_glpi_cycle.py  seed_glpi_healthcare.py  seed_kb.py  smoke_pipeline.py
src/: bootstrap.py  config.py  main.py  scheduler.py
src/api/: admin.py  drafts.py  health.py  pipeline.py  search.py  settings.py  stats.py  tickets.py  topics.py
src/demo/: ticket_fixtures.py
src/indexing/: __init__.py  chunker.py  indexer.py
src/itsm/: __init__.py  base.py  glpi.py  mock.py  registry.py
src/llm/: __init__.py  embeddings.py  openai_generator.py  prompt.py
src/migrations/: env.py
src/migrations/versions/: 202604220001_init_kb_schema.py  202604221001_add_tuning_thresholds.py  202604221002_add_ticket_embedding.py
src/pipeline/: __init__.py  dedup.py  generate.py  importer.py  push.py
src/retrieval/: __init__.py  neighbours.py  searcher.py
src/schemas/: __init__.py  api.py  article.py  ticket.py
src/scoring/: __init__.py  health.py
src/storage/: __init__.py  articles.py  db.py  models.py  tickets.py
tests/: conftest.py  test_chunker.py  test_dedup.py  test_glpi_adapter.py  test_scoring.py
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+27 files in other folders)
